[tool.poetry]
name = "maze"
version = "0.1.0"
description = "a maze game with various levels and audio effects built using pygame"
authors = ["Sayhan Rahman <sayhanrahman@gokkusagi.k12.tr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
